# StreamXL

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  PRODUCTION_AUDIT_REPORT.md  README.md  SECURITY.md  llms.txt  pyproject.toml  pyproject.toml.bak
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rust-build.yml  test-python.yml
benchmarks/: openpyxl_vs_streamxl.py  openpyxl_vs_streamxl_write.py  results.md
core/: Cargo.toml
core/src/: lib.rs  relationships.rs  shared_strings.rs  sheet_manager.rs  sheet_parser.rs  stream.rs  workbook.rs  writer.rs  zip_reader.rs
docs/: api_spec.md  architecture.md  design_decisions.md  performance_model.md  xlsx_format.md
examples/: basic_read.py  memory_benchmark.py  streaming_etl.py
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/streamxl/: __init__.py  _formula_support.py  api.py  core.py  error_messages.py  integrity.py  security.py
scripts/: benchmark.sh  build.sh  install.sh
streamxl/: okf_sheet_metadata.py
tests/: conftest.py  test_basic.py  test_shared_strings.py  test_streaming.py  test_write.py
