[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "streamxl"
version = "0.2.0"
description = "High-performance streaming XLSX reader and writer for Python, powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["xlsx", "excel", "streaming", "rust", "performance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
python-source = "python"
module-name = "streamxl._core"
manifest-path = "python/Cargo.toml"
