[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "streamxl"
version = "0.1.0"
description = "High-performance streaming XLSX reader for Python, powered by Rust"
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.maturin]
module-name = "streamxl._core"
